use correct payment type ids